# agentverse

./: .editorconfig  .env.production  .gitignore  BLUEPRINT_V2_PROGRESS.md  CLAUDE.md  DELIVERABLES_INDEX_STEP3_PARTIAL.md  GAPS.md  PROJECT_STATE.md  QA_REPORT_2026-01-12.md  README.md  REPORT_GOAL_BLUEPRINT_TEG_RESTORE.md  REPORT_PROD_E2E_2026-01-22.md  REPORT_TEG_UNIVERSE_MAP.md  SPEC_COVERAGE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  report.md  todo.md  turbo.json
apps/api/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  nixpacks.toml  pyproject.toml  railway-worker.toml  railway.json  railway.toml  render.yaml  requirements.txt  start-worker.sh  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2024_01_01_0001_initial_migration.py  2024_01_02_0002_add_data_source_tables.py  2024_01_02_0003_add_persona_tables.py  2024_01_02_0004_add_product_tables.py  2024_01_02_0005_add_focus_group_tables.py  2024_01_02_0006_add_organization_tables.py  2024_01_02_0007_add_marketplace_tables.py  2024_01_02_0008_add_world_tables.py  2026_01_03_0829_dabd56adb2ca_add_llm_config_to_marketplace_templates.py  2026_01_08_0001_add_predictive_simulation_tables.py  2026_01_08_0002_spec_compliant_schema.py  2026_01_09_0001_add_llm_router_tables.py  (+37 more)
apps/api/app/: __init__.py  main.py  worker.py
apps/api/dashboards/: agentverse-overview.json
apps/api/docs/: capacity-planning.md  compliance-checklist.md  disaster-recovery.md
apps/api/scripts/: alpha_ops_sampler.py  check_llm_usage.py  create_100_personas.py  import_test_results.py  negative_control_tests.py  negative_control_tests_standalone.py  reproducibility_audit.py  run_real_backtests.py  seed_dev.py
apps/api/static/: prediction-test.html
apps/api/tests/: __init__.py  conftest.py  test_api_integration.py  test_comprehensive.py  test_global_invariants.py  test_phase2_manifests.py  test_phase3_probability_source.py  test_phase4_calibration.py  test_phase5_telemetry_standardization.py  test_phase7_reports.py  test_phase8_backtests.py  test_scenario_backtests.py  test_simulation_e2e.py  test_step10_governance.py  test_step1_runs.py  test_step2_project_overview.py  test_step3_personas.py  test_step4_universe_map.py  test_step5_event_compiler.py  test_step6_target_mode.py  test_step7_calibration.py  test_step8_replay.py  test_step9_universe_graph.py  test_verification_checklist.py
(+771 files in other folders)
